# protonup

./: .gitignore  README.md  setup.cfg
.github/workflows/: codeql-analysis.yml
protonup/: __init__.py  api.py  cli.py  constants.py  gui.py  utilities.py
