[metadata]
name = protonup
version = 0.1.3
description = Manage Proton-GE Installations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AUNaseef/protonup
author = Naseef
license = GPL-3.0
license_files =
	LICENSE

[options]
packages = find:
install_requires = 
	requests
python_requires = >3.6

[options.entry_points]
console_scripts =
    protonup = protonup:main

